--- a/02/Task4/admin_dashboard/dashboard/templates/dashboard/index.html
+++ b/02/Task4/admin_dashboard/dashboard/templates/dashboard/index.html
@@ -88,7 +88,7 @@
                         <button class="text-sm">View Details</button>
                     </div>
                 </div>
-                <div class="bg-blue-500 text-white rounded-lg shadow-md p-4 card">
+                <div class="bg-purple-500 text-white rounded-lg shadow-md p-4 card">
                     <div class="flex items-center justify-between mb-2">
                         <h2 class="text-lg font-bold">Pending Orders</h2>
                         <i class="fas fa-box text-white"></i>
@@ -98,7 +98,7 @@
                         <button class="text-sm">View Details</button>
                     </div>
                 </div>
-                <div class="bg-red-500 text-white rounded-lg shadow-md p-4 card">
+                <div class="bg-yellow-500 text-white rounded-lg shadow-md p-4 card">
                     <div class="flex items-center justify-between mb-2">
                         <h2 class="text-lg font-bold">Alerts</h2>
                         <i class="fas fa-exclamation-circle text-white"></i>
